[#31629] CI: Linux: Build on Debian Bullseye (11)
Building LLVM>=v11 requires `_Sp_make_shared_tag::_S_eq` symbol that
can't be supplied by any `libstdc++` available for Debian Buster (10).

Precisely, since the symbol was introduced with `GCC 9.1.0` release
[1][2], it requires `libstdc++` built from GCC sources newer than that
release. The latest available library for Debian Buster, which can be
found in the `libstdc++6 8.3.0-6` package, was based on `GCC 8.3.0`.

[1] https://github.com/gcc-mirror/gcc/blob/master/libstdc++-v3/config/abi/pre/gnu.ver#L2271
[2] https://gcc.gnu.org/onlinedocs/libstdc++/manual/abi.html

--- a/.ci.yml
+++ b/.ci.yml
@@ -3,12 +3,8 @@ stages:
   - cross
 
 .before_script_content: &before_script_content |
-  # BUILD_RPATH_USE_ORIGIN is available since CMake 3.14 (unavailable in default repositories)
   apt update
-  apt install -y ca-certificates
-  echo "deb https://deb.debian.org/debian buster-backports main" >>/etc/apt/sources.list
-  apt update
-  apt install -y cmake/buster-backports g++$TOOLCHAIN_SUFFIX patch python3 xz-utils
+  apt install -y cmake g++$TOOLCHAIN_SUFFIX patch python3 xz-utils
 
 .before_script: &before_script
   before_script:
@@ -49,7 +45,7 @@ stages:
 
 linux-aarch64:
   stage: cross
-  image: debian:buster
+  image: debian:bullseye
   dependencies:
     - linux-x86_64
   variables:
@@ -61,7 +57,7 @@ linux-aarch64:
 
 linux-arm:
   stage: cross
-  image: debian:buster
+  image: debian:bullseye
   dependencies:
     - linux-x86_64
   variables:
@@ -73,7 +69,7 @@ linux-arm:
 
 linux-x86_64:
   stage: native
-  image: debian:buster
+  image: debian:bullseye
   variables:
     RUN_CTEST: "true"
   <<: *before_script
