--- a/.ci.yml
+++ b/.ci.yml
@@ -2,6 +2,9 @@ stages:
   - native
   - cross
 
+variables:
+  ARTIFACTS_NAME: "llvm-disas-$CI_PIPELINE_ID-$CI_JOB_NAME"
+
 .before_script_content: &before_script_content |
   apt update
   apt install -y cmake g++$TOOLCHAIN_SUFFIX patch python3 xz-utils
@@ -34,7 +37,7 @@ stages:
 
 .build_artifacts: &build_artifacts
   artifacts:
-    name: "llvm-disas-$CI_PIPELINE_ID-$CI_JOB_NAME"
+    name: "$ARTIFACTS_NAME"
     paths:
       - shared/libllvm-disas.*
       - shared/test-app
@@ -95,6 +98,7 @@ windows:
     - bash .ci/windows.sh
     - ldd shared/libllvm-disas.dll
   artifacts:
+    name: "$ARTIFACTS_NAME"
     paths:
       - shared/libllvm-disas.dll
       - shared/test-app.exe
