[DEV] CMake: Cache LLVM source and built libraries in `cache/`
This will make it clear that these files can be safely removed.

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,8 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-# Exceptions
+# Include all OpenLibm files
 !lib/openlibm/*
+
+# LLVM sources and built LLVM libraries
+cache/*
