--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,11 @@ project (renode-llvm-disas)
 
 # Variables describing LLVM libraries
 
-set(LLVM_SRC_URL https://releases.llvm.org/9.0.0/llvm-9.0.0.src.tar.xz)
+set(LLVM_SRC_URL    https://releases.llvm.org/9.0.0/llvm-9.0.0.src.tar.xz)
 set(LLVM_SRC_SHA512 1bb3341e1d231559b948f1505b33c2e2e03989f9b8bbfef0e0cdaff5ac43f85574c9ec5ac53399b914f497d6899425d861411024e8d7e1d1a338c1c6951ac658)
 
-set(LLVM_LIBS_DIR  ${CMAKE_SOURCE_DIR}/lib/llvm-${CMAKE_SYSTEM_PROCESSOR})
-set(LLVM_LIBS      AArch64Desc AArch64Disassembler AArch64Info AArch64Utils ARMDesc ARMDisassembler ARMInfo ARMUtils BinaryFormat MC MCDisassembler MipsDesc MipsDisassembler MipsInfo PowerPCDesc PowerPCDisassembler PowerPCInfo RISCVDesc RISCVDisassembler RISCVInfo RISCVUtils SparcDesc SparcDisassembler SparcInfo Support X86Desc X86Disassembler X86Info X86Utils)
+set(LLVM_LIBS_DIR   ${CMAKE_SOURCE_DIR}/cache/${CMAKE_SYSTEM_PROCESSOR})
+set(LLVM_LIBS       AArch64Desc AArch64Disassembler AArch64Info AArch64Utils ARMDesc ARMDisassembler ARMInfo ARMUtils BinaryFormat MC MCDisassembler MipsDesc MipsDisassembler MipsInfo PowerPCDesc PowerPCDisassembler PowerPCInfo RISCVDesc RISCVDisassembler RISCVInfo RISCVUtils SparcDesc SparcDisassembler SparcInfo Support X86Desc X86Disassembler X86Info X86Utils)
 
 # On macOS "sys::PrintStackTrace" needs extra "itaniumDemangle" function from LLVMDemangle library
 if(CMAKE_HOST_APPLE)
@@ -111,6 +111,9 @@ endif()
 # Build LLVM libraries
 
 if(BUILD_LLVM_LIBS)
+    # It doesn't fail if the directory exists.
+    file(MAKE_DIRECTORY ${LLVM_LIBS_DIR})
+
     foreach(LIB ${LLVM_LIBS})
         list(APPEND LLVM_MAKE_TARGETS LLVM${LIB})
         list(APPEND LLVM_BUILD_PATHS  ${CMAKE_BINARY_DIR}/llvm-ep-prefix/src/llvm-ep-build/lib/libLLVM${LIB}.a)
@@ -124,7 +127,7 @@ if(BUILD_LLVM_LIBS)
 
     include(ExternalProject)
     ExternalProject_Add(llvm-ep
-        DOWNLOAD_DIR    ${LLVM_LIBS_DIR}
+        DOWNLOAD_DIR    ${CMAKE_SOURCE_DIR}/cache
         URL             ${LLVM_SRC_URL}
         URL_HASH        SHA512=${LLVM_SRC_SHA512}
         PATCH_COMMAND   sh -c "find ${CMAKE_CURRENT_LIST_DIR}/llvm-patches -name '*.patch' | while read -r p $<SEMICOLON> do patch -p2 < \"$p\" $<SEMICOLON> done"
